# ADSPArduotuve

./: CMakeLists.txt  Detale.cpp  Detale.h  Klientas.cpp  Klientas.h  Kompiuteris.cpp  Kompiuteris.h  Komponentas.h  KonsolesSpalva.cpp  KonsolesSpalva.h  Krepselis.cpp  Krepselis.h  Parduotuve.cpp  Parduotuve.h  Produktas.cpp  Produktas.h  main.cpp
