cmake_minimum_required(VERSION 3.16)
project(Parduotuve)

set(CMAKE_CXX_STANDARD 14)

add_executable(Parduotuve main.cpp Parduotuve.cpp Parduotuve.h Produktas.cpp Produktas.h Klientas.cpp Klientas.h Krepselis.cpp Krepselis.h Kompiuteris.cpp Kompiuteris.h Komponentas.h Detale.cpp Detale.h KonsolesSpalva.cpp KonsolesSpalva.h)